--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "react-unity-webgl": "^9.4.3"
   },
   "devDependencies": {
     "@types/node": "^20",
