--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "hamburger-react": "^2.5.0",
-    "next": "13.5.5",
+    "next": "^15.5.9",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
